...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aboutme" translatesAutoresizingMaskIntoConstraints="NO" id="koV-Je-COn">
                                <rect key="frame" x="16" y="127" width="361" height="254"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="socialCell" id="A1G-Sr-IT2" userLabel="socialCell">
                                        <rect key="frame" x="0.0" y="50" width="377" height="43.666667938232422"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                </prototypes>
                            </tableView>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LHK-aw-BXn" userLabel="aboutTextView">
                                <rect key="frame" x="16" y="383" width="361" height="156"/>
                                <color key="backgroundColor" red="0.1532291174" green="0.1532291174" blue="0.1532291174" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="About" image="person.circle.fill" catalog="system" id="GJ2-0v-t8f"/>
                    <connections>
                        <outlet property="aboutMeImage" destination="koV-Je-COn" id="qfH-Hq-Syp"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stream Now" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0n1-wN-v3X">
                                <rect key="frame" x="20" y="116" width="176" height="19"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
...
                                </constraints>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="currentStreamCell" id="R69-0j-d7f">
                                        <rect key="frame" x="0.0" y="50" width="388" height="43.666667938232422"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                <rect key="frame" x="20" y="145" width="357" height="128"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="afk" translatesAutoresizingMaskIntoConstraints="NO" id="24D-9r-tJ5">
                                        <rect key="frame" x="0.0" y="0.0" width="357" height="128"/>
                                        <constraints>
...
                                </constraints>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Previous Streams" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZRd-8M-CPV">
                                <rect key="frame" x="20" y="329.66666666666669" width="373" height="58"/>
                                <constraints>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="9qx-MU-KzK"/>
                    <connections>
                        <outlet property="liveStream" destination="A19-DJ-Lve" id="TJ2-f9-efT"/>
...
                                <color key="backgroundColor" red="0.1532291174" green="0.1532291174" blue="0.1532291174" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="settingsCell" id="s9Y-O1-AOk" userLabel="settingsCell">
                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="ZrG-tv-7eI"/>
                    <connections>
                        <outlet property="settingsAndMore" destination="O0a-wv-myA" id="J0T-ki-cn5"/>
...
