<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--SupportMeVC-->
        <scene sceneID="s0d-6b-0kx">
            <objects>
                <viewController id="Y6W-OH-hqX" userLabel="SupportMeVC" customClass="SupportMeViewController" customModule="Alpine_Music_App" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="awQ-bC-FRd">
                                <rect key="frame" x="16" y="109" width="361" height="116.66666666666669"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Support The Arts!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbI-pQ-8n8">
                                        <rect key="frame" x="0.0" y="0.0" width="361" height="33.666666666666664"/>
                                        <accessibility key="accessibilityConfiguration" identifier="supportLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="vPo-kq-XWh">
                                        <rect key="frame" x="0.0" y="33.666666666666657" width="361" height="83"/>
                                        <color key="backgroundColor" red="0.1532291174" green="0.1532291174" blue="0.1532291174" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="supportTV"/>
                                        <string key="text">Love my work? Please support! Artists work hard to add joy to the lives of their fans, and they depend on your support - anything and everything is appreciated 🥹</string>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="vPo-kq-XWh" secondAttribute="trailing" id="QRc-Kt-xpf"/>
                                    <constraint firstAttribute="bottom" secondItem="vPo-kq-XWh" secondAttribute="bottom" id="iy7-s2-byS"/>
                                    <constraint firstItem="vPo-kq-XWh" firstAttribute="top" secondItem="awQ-bC-FRd" secondAttribute="top" constant="33.670000000000002" id="odT-ne-9WM"/>
                                    <constraint firstItem="vPo-kq-XWh" firstAttribute="leading" secondItem="awQ-bC-FRd" secondAttribute="leading" id="pbS-Sy-X3E"/>
                                </constraints>
                            </stackView>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fR0-a5-uWh">
                                <rect key="frame" x="16" y="233.33333333333337" width="361" height="496"/>
                                <color key="backgroundColor" red="0.1532291174" green="0.1532291174" blue="0.1532291174" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="496" id="Mt4-Bv-hcy"/>
                                </constraints>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="donationCell" id="xcq-bm-bfe">
                                        <rect key="frame" x="0.0" y="50" width="361" height="43.666667938232422"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xcq-bm-bfe" id="Krf-EM-lAN">
                                            <rect key="frame" x="0.0" y="0.0" width="361" height="43.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" red="0.1532291174" green="0.1532291174" blue="0.1532291174" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Payments will be charged to your App Store account. Payments are a one time charge to your App Store account." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="OHb-FR-2Z5">
                                <rect key="frame" x="16" y="773" width="361" height="44.666666666666629"/>
                                <color key="backgroundColor" red="0.1532291174" green="0.1532291174" blue="0.1532291174" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="disclaimerTV"/>
                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5rT-1y-xA7">
                                <rect key="frame" x="15.999999999999996" y="109" width="39.666666666666657" height="34.333333333333343"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system" imagePadding="0.0"/>
                                <connections>
                                    <action selector="backButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="vFc-zU-jNi"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                        <color key="backgroundColor" red="0.1532291174" green="0.1532291174" blue="0.1532291174" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <constraints>
                            <constraint firstItem="OHb-FR-2Z5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="A9Z-ne-bno"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="OHb-FR-2Z5" secondAttribute="bottom" constant="0.33000000000000002" id="Axm-qx-gI7"/>
                            <constraint firstItem="5rT-1y-xA7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="K9Z-VS-Tdd"/>
                            <constraint firstItem="awQ-bC-FRd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="50" id="NnC-gZ-efs"/>
                            <constraint firstItem="awQ-bC-FRd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="OEp-Yp-ZQH"/>
                            <constraint firstItem="fR0-a5-uWh" firstAttribute="top" secondItem="awQ-bC-FRd" secondAttribute="bottom" constant="7.6699999999999999" id="XFr-Jn-nsE"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="OHb-FR-2Z5" secondAttribute="trailing" constant="16" id="h8z-pN-Smm"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="awQ-bC-FRd" secondAttribute="trailing" constant="16" id="iMb-R7-ZMr"/>
                            <constraint firstItem="5rT-1y-xA7" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="50" id="kSW-ed-rVl"/>
                            <constraint firstItem="fR0-a5-uWh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="ksF-BZ-qFr"/>
                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="fR0-a5-uWh" secondAttribute="trailing" constant="16" id="qCH-uo-gBf"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="donationOptions" destination="fR0-a5-uWh" id="hEq-nw-AeP"/>
                        <outlet property="supportMeBackButton" destination="5rT-1y-xA7" id="Hag-bi-b7O"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="9.9236641221374047" y="-2.1126760563380285"/>
        </scene>
    </scenes>
    <resources>
        <image name="chevron.backward" catalog="system" width="97" height="128"/>
    </resources>
</document>
